corrected and added lines

--- a/whale_analysis.ipynb
+++ b/whale_analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "2015-03-06                    -0.008481               -0.013098  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "2015-03-09                     0.005843               -0.001652  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "2014-06-03  0.005292     NaN"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "2014-06-11  0.004760 -0.003761"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
        "2012-10-05  $12,418.99"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "2012-10-05  12418.99"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
        "2012-10-05 -0.002305"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
        "2012-10-09 -0.011709"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
        "2012-10-09 -0.011709"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
        "2015-03-09  0.001303 -0.006555  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,7 @@
        "<AxesSubplot:title={'center':'Daily Returns'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
        "<AxesSubplot:title={'center':'Cumulative Returns'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1334,7 @@
        "S&P TSX                       0.007034"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1421,7 @@
        "Algo 2                                       True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
        "S&P TSX                            0.111664"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1565,7 @@
        "<AxesSubplot:title={'center':'21-Day Window Rolling Std for all Portfolios'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1747,7 @@
        "S&P TSX                      1.000000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1773,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1814,7 +1814,7 @@
        "<AxesSubplot:title={'center':'60-Day Window Rolling Beta for Algo 2 and S&P TSX'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1870,7 +1870,7 @@
        "<AxesSubplot:title={'center':'Exponentially Weighted Average of all Portfolio'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1912,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1928,7 +1928,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
        "<AxesSubplot:title={'center':'Sharpe Ratios'}>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2088,7 +2088,7 @@
        "2018-01-08  139.51"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2104,7 +2104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2170,7 @@
        "2018-01-08  42.16"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2186,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2252,7 +2252,7 @@
        "2018-01-08  56.86"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2268,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2348,7 +2348,7 @@
        "2018-01-08  139.51  42.16  56.86"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2362,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2442,7 +2442,7 @@
        "2018-01-09 -0.011254 -0.000712  0.008969"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2470,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2536,7 +2536,7 @@
        "2018-01-09                   -0.000999"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2563,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2694,7 +2694,7 @@
        "2018-01-09 -0.002091  0.000097                   -0.000999  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2708,7 +2708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2717,7 +2717,7 @@
        "<AxesSubplot:title={'center':'Daily Returns of combined portfolio'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2742,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -2751,7 +2751,7 @@
        "<AxesSubplot:title={'center':'Cumulative Returns of combined portfolio'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2787,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -2796,7 +2796,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2821,7 +2821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2897,7 +2897,7 @@
        "Weighted Returns Portfolio    0.014132"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2917,7 +2917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2993,7 +2993,7 @@
        "Weighted Returns Portfolio                   True"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3017,7 +3017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -3093,7 +3093,7 @@
        "Weighted Returns Portfolio         0.224346"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3113,7 +3113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -3122,7 +3122,7 @@
        "<AxesSubplot:title={'center':' Rolling Std 21-Day'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3158,7 +3158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -3327,7 +3327,7 @@
        "Weighted Returns Portfolio   0.579228                    1.000000  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3341,7 +3341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -3350,7 +3350,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3382,7 +3382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -3391,7 +3391,7 @@
        "<AxesSubplot:title={'center':'Rolling Beta 60-Day'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3429,18 +3429,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SOROS FUND MANAGEMENT LLC     -0.088196\n",
+       "PAULSON & CO.INC.             -0.396282\n",
+       "TIGER GLOBAL MANAGEMENT LLC   -1.391612\n",
+       "BERKSHIRE HATHAWAY INC         0.195907\n",
+       "Algo 1                         1.901461\n",
+       "Algo 2                         0.021394\n",
+       "S&P TSX                        0.034651\n",
+       "Weighted Returns Portfolio     1.564547\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate Annualzied Sharpe Ratios\n",
     "\n",
-    "sharpe_ratios = joined_returns_df.mean() * 252 / (joined_returns_df.std() * np.sqrt(252))\n"
+    "sharpe_ratios = joined_returns_df.mean() * 252 / (joined_returns_df.std() * np.sqrt(252)); sharpe_ratios\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -3449,7 +3468,7 @@
        "<AxesSubplot:title={'center':'Sharpe Ratios'}>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3485,7 +3504,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "It appears that my Portfolio (Shopify, Open Text Corp, and Loblaw) are performing better than S&P TSX and the Whales portfolio. However, Algo 1 outperforms all!"
+    "It appears that my Portfolio (Shopify, Open Text Corp, and Loblaw) are performing better than S&P TSX and the Whales portfolio with a sharpe ratio of 1.56. However, Algo 1 outperforms all with a 1.90 sharpe ratio."
    ]
   }
  ],
